// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/page-header/demo/actions.vue correctly 1`] = `
<div>
  <div
    class="xy-page-header xy-page-header-ghost demo-page-header"
    style="border: 1px solid rgb(235, 237, 240);"
  >
    <!---->
    <div
      class="xy-page-header-heading"
    >
      <div
        class="xy-page-header-heading-left"
      >
        <div
          class="xy-page-header-back"
        >
          <div
            aria-label="Back"
            class="xy-page-header-back-button"
            role="button"
            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
            tabindex="0"
          >
            
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            
          </div>
        </div>
        <!---->
        <span
          class="xy-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="xy-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
        <!---->
      </div>
      <span
        class="xy-page-header-heading-extra"
      >
        <div
          class="xy-space xy-space-horizontal xy-space-align-center"
        >
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
          >
            <button
              class="xy-btn xy-btn-primary"
              type="button"
            >
              <!---->
              
              <span>
                Primary
              </span>
              
            </button>
          </div>
          <!---->
          
          
        </div>
      </span>
    </div>
    <div
      class="xy-page-header-content"
    >
      
      <div
        class="xy-descriptions xy-descriptions-small"
      >
        <!---->
        <div
          class="xy-descriptions-view"
        >
          <table>
            <tbody>
              
              <tr
                class="xy-descriptions-row"
              >
                
                <td
                  class="xy-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="xy-descriptions-item-container"
                  >
                    <span
                      class="xy-descriptions-item-label"
                    >
                      Created
                    </span>
                    <span
                      class="xy-descriptions-item-content"
                    >
                      
                      Lili Qu
                      
                    </span>
                  </div>
                </td>
                <td
                  class="xy-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="xy-descriptions-item-container"
                  >
                    <span
                      class="xy-descriptions-item-label"
                    >
                      Association
                    </span>
                    <span
                      class="xy-descriptions-item-content"
                    >
                      
                      <a>
                        421421
                      </a>
                      
                    </span>
                  </div>
                </td>
                <td
                  class="xy-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="xy-descriptions-item-container"
                  >
                    <span
                      class="xy-descriptions-item-label"
                    >
                      Creation Time
                    </span>
                    <span
                      class="xy-descriptions-item-content"
                    >
                      
                      2017-01-10
                      
                    </span>
                  </div>
                </td>
                
              </tr>
              <tr
                class="xy-descriptions-row"
              >
                
                <td
                  class="xy-descriptions-item"
                  colspan="1"
                >
                  <div
                    class="xy-descriptions-item-container"
                  >
                    <span
                      class="xy-descriptions-item-label"
                    >
                      Effective Time
                    </span>
                    <span
                      class="xy-descriptions-item-content"
                    >
                      
                      2017-10-10
                      
                    </span>
                  </div>
                </td>
                <td
                  class="xy-descriptions-item"
                  colspan="2"
                >
                  <div
                    class="xy-descriptions-item-container"
                  >
                    <span
                      class="xy-descriptions-item-label"
                    >
                      Remarks
                    </span>
                    <span
                      class="xy-descriptions-item-content"
                    >
                      
                       Gonghu Road, Xihu District, Hangzhou, Zhejiang, China 
                      
                    </span>
                  </div>
                </td>
                
              </tr>
              
            </tbody>
          </table>
        </div>
      </div>
      
    </div>
    <!---->
  </div>
  <br />
  <div
    class="xy-page-header xy-page-header-ghost"
  >
    <!---->
    <div
      class="xy-page-header-heading"
    >
      <div
        class="xy-page-header-heading-left"
      >
        <div
          class="xy-page-header-back"
        >
          <div
            aria-label="Back"
            class="xy-page-header-back-button"
            role="button"
            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
            tabindex="0"
          >
            
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            
          </div>
        </div>
        <!---->
        <span
          class="xy-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="xy-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
        <span
          class="xy-page-header-heading-tags"
        >
          
          <span
            class="xy-tag xy-tag-blue"
          >
            
            Running
            
            <!---->
          </span>
          
        </span>
      </div>
      <span
        class="xy-page-header-heading-extra"
      >
        <div
          class="xy-space xy-space-horizontal xy-space-align-center"
        >
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
          >
            <button
              class="xy-btn xy-btn-primary"
              type="button"
            >
              <!---->
              
              <span>
                Primary
              </span>
              
            </button>
          </div>
          <!---->
          
          
        </div>
      </span>
    </div>
    <div
      class="xy-page-header-content"
    >
      
      <div
        class="xy-row"
        type="flex"
      >
        
        <div
          class="xy-statistic"
        >
          <div
            class="xy-statistic-title"
          >
            Status
          </div>
          
          <div
            class="xy-statistic-content"
          >
            <!---->
            <span
              class="xy-statistic-content-value"
            >
              Pending
            </span>
            <!---->
          </div>
          
        </div>
        <div
          class="xy-statistic"
          style="margin: 0px 32px;"
        >
          <div
            class="xy-statistic-title"
          >
            Price
          </div>
          
          <div
            class="xy-statistic-content"
          >
            <span
              class="xy-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="xy-statistic-content-value"
            >
              
              <span
                class="xy-statistic-content-value-int"
              >
                
                568
              </span>
              <span
                class="xy-statistic-content-value-decimal"
              >
                .08
              </span>
              
            </span>
            <!---->
          </div>
          
        </div>
        <div
          class="xy-statistic"
        >
          <div
            class="xy-statistic-title"
          >
            Balance
          </div>
          
          <div
            class="xy-statistic-content"
          >
            <span
              class="xy-statistic-content-prefix"
            >
              $
            </span>
            <span
              class="xy-statistic-content-value"
            >
              
              <span
                class="xy-statistic-content-value-int"
              >
                
                3,345
              </span>
              <span
                class="xy-statistic-content-value-decimal"
              >
                .08
              </span>
              
            </span>
            <!---->
          </div>
          
        </div>
        
      </div>
      
    </div>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/basic.vue correctly 1`] = `
<div
  class="xy-page-header xy-page-header-ghost"
  style="border: 1px solid rgb(235, 237, 240);"
>
  <!---->
  <div
    class="xy-page-header-heading"
  >
    <div
      class="xy-page-header-heading-left"
    >
      <div
        class="xy-page-header-back"
      >
        <div
          aria-label="Back"
          class="xy-page-header-back-button"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          
          <span
            aria-label="arrow-left"
            class="anticon anticon-arrow-left"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="arrow-left"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
          
        </div>
      </div>
      <!---->
      <span
        class="xy-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="xy-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/page-header/demo/breadcrumb.vue correctly 1`] = `
<div
  class="xy-page-header has-breadcrumb xy-page-header-ghost"
  style="border: 1px solid rgb(235, 237, 240);"
>
  <nav
    class="xy-breadcrumb"
  >
    <ol>
      
      <li>
        <span
          class="xy-breadcrumb-link"
        >
          
          <a
            href="#/index"
          >
            First-level Menu
          </a>
          
        </span>
        <span
          class="xy-breadcrumb-separator"
        >
          /
        </span>
      </li>
      <li>
        <span
          class="xy-breadcrumb-link"
        >
          
          <a
            href="#/index/first"
          >
            Second-level Menu
          </a>
          
        </span>
        <span
          class="xy-breadcrumb-separator"
        >
          /
        </span>
      </li>
      <li>
        <span
          class="xy-breadcrumb-link"
        >
          
          <span>
            Third-level Menu
          </span>
          
        </span>
        <span
          class="xy-breadcrumb-separator"
        >
          /
        </span>
      </li>
      
    </ol>
  </nav>
  <div
    class="xy-page-header-heading"
  >
    <div
      class="xy-page-header-heading-left"
    >
      <!---->
      <!---->
      <span
        class="xy-page-header-heading-title"
        title="Title"
      >
        Title
      </span>
      <span
        class="xy-page-header-heading-sub-title"
        title="This is a subtitle"
      >
        This is a subtitle
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/page-header/demo/content.vue correctly 1`] = `
<div
  class="components-page-header-demo-content"
>
  <div
    class="xy-page-header has-breadcrumb xy-page-header-ghost site-page-header"
  >
    <nav
      class="xy-breadcrumb"
    >
      <ol>
        
        <li>
          <span
            class="xy-breadcrumb-link"
          >
            
            <a
              href="#/index"
            >
              First-level Menu
            </a>
            
          </span>
          <span
            class="xy-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="xy-breadcrumb-link"
          >
            
            <a
              href="#/index/first"
            >
              Second-level Menu
            </a>
            
          </span>
          <span
            class="xy-breadcrumb-separator"
          >
            /
          </span>
        </li>
        <li>
          <span
            class="xy-breadcrumb-link"
          >
            
            <span>
              Third-level Menu
            </span>
            
          </span>
          <span
            class="xy-breadcrumb-separator"
          >
            /
          </span>
        </li>
        
      </ol>
    </nav>
    <div
      class="xy-page-header-heading"
    >
      <div
        class="xy-page-header-heading-left"
      >
        <!---->
        <span
          class="xy-avatar xy-avatar-circle xy-avatar-image"
        >
          <img
            src="https://avatars1.githubusercontent.com/u/8186664?s=460&v=4"
          />
        </span>
        <span
          class="xy-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="xy-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
        <span
          class="xy-page-header-heading-tags"
        >
          
          <span
            class="xy-tag xy-tag-blue"
          >
            
            Running
            
            <!---->
          </span>
          
        </span>
      </div>
      <span
        class="xy-page-header-heading-extra"
      >
        <div
          class="xy-space xy-space-horizontal xy-space-align-center"
        >
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-primary"
              type="button"
            >
              <!---->
              
              <span>
                Primary
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
          >
            
            <button
              class="xy-btn xy-btn-default xy-dropdown-trigger"
              style="padding: 0px;"
              type="button"
            >
              <!---->
              
              <span
                aria-label="ellipsis"
                class="anticon anticon-ellipsis"
                role="img"
                style="font-size: 20px; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
              
            </button>
            <!---->
            
          </div>
          <!---->
          
          
        </div>
      </span>
    </div>
    <div
      class="xy-page-header-content"
    >
      
      <div
        class="xy-row content"
      >
        
        <div
          style="flex: 1;"
        >
          <p>
             Ant Design interprets the color system into two levels: a system-level color system and a product-level color system. 
          </p>
          <p>
             Ant Design's design team preferred to design with the HSB color model, which makes it easier for designers to have a clear psychological expectation of color when adjusting colors, as well as facilitate communication in teams. 
          </p>
          <div>
            
            <a
              class="example-link"
            >
              <img
                alt="Quick Start"
                class="example-link-icon"
                src="https://gw.alipayobjects.com/zos/rmsportal/MjEImQtenlyueSmVEfUD.svg"
              />
               Quick Start
            </a>
            <a
              class="example-link"
            >
              <img
                alt="Product Info"
                class="example-link-icon"
                src="https://gw.alipayobjects.com/zos/rmsportal/NbuDUAuBlIApFuDvWiND.svg"
              />
               Product Info
            </a>
            <a
              class="example-link"
            >
              <img
                alt="Product Doc"
                class="example-link-icon"
                src="https://gw.alipayobjects.com/zos/rmsportal/ohOEPSYdDTNnyMbGuyLb.svg"
              />
               Product Doc
            </a>
            
          </div>
        </div>
        <div
          class="image"
        >
          <img
            alt="content"
            src="https://gw.alipayobjects.com/zos/antfincdn/K%24NnlsB%26hz/pageHeader.svg"
            style="width: 100%;"
          />
        </div>
        
      </div>
      
    </div>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/page-header/demo/ghost.vue correctly 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="demo-page-header"
    style="background-color: rgb(245, 245, 245); padding: 24px;"
  >
    <div
      class="xy-page-header"
    >
      <!---->
      <div
        class="xy-page-header-heading"
      >
        <div
          class="xy-page-header-heading-left"
        >
          <div
            class="xy-page-header-back"
          >
            <div
              aria-label="Back"
              class="xy-page-header-back-button"
              role="button"
              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
              tabindex="0"
            >
              
              <span
                aria-label="arrow-left"
                class="anticon anticon-arrow-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="arrow-left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
              
            </div>
          </div>
          <!---->
          <span
            class="xy-page-header-heading-title"
            title="Title"
          >
            Title
          </span>
          <span
            class="xy-page-header-heading-sub-title"
            title="This is a subtitle"
          >
            This is a subtitle
          </span>
          <!---->
        </div>
        <span
          class="xy-page-header-heading-extra"
        >
          <div
            class="xy-space xy-space-horizontal xy-space-align-center"
          >
            
            
            <div
              class="xy-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="xy-btn xy-btn-default"
                type="button"
              >
                <!---->
                
                <span>
                  Operation
                </span>
                
              </button>
            </div>
            <!---->
            
            
            <div
              class="xy-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="xy-btn xy-btn-default"
                type="button"
              >
                <!---->
                
                <span>
                  Operation
                </span>
                
              </button>
            </div>
            <!---->
            
            
            <div
              class="xy-space-item"
            >
              <button
                class="xy-btn xy-btn-primary"
                type="button"
              >
                <!---->
                
                <span>
                  Primary
                </span>
                
              </button>
            </div>
            <!---->
            
            
          </div>
        </span>
      </div>
      <div
        class="xy-page-header-content"
      >
        
        <div
          class="xy-descriptions xy-descriptions-small"
        >
          <!---->
          <div
            class="xy-descriptions-view"
          >
            <table>
              <tbody>
                
                <tr
                  class="xy-descriptions-row"
                >
                  
                  <td
                    class="xy-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="xy-descriptions-item-container"
                    >
                      <span
                        class="xy-descriptions-item-label"
                      >
                        Created
                      </span>
                      <span
                        class="xy-descriptions-item-content"
                      >
                        
                        Lili Qu
                        
                      </span>
                    </div>
                  </td>
                  <td
                    class="xy-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="xy-descriptions-item-container"
                    >
                      <span
                        class="xy-descriptions-item-label"
                      >
                        Association
                      </span>
                      <span
                        class="xy-descriptions-item-content"
                      >
                        
                        <a>
                          421421
                        </a>
                        
                      </span>
                    </div>
                  </td>
                  <td
                    class="xy-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="xy-descriptions-item-container"
                    >
                      <span
                        class="xy-descriptions-item-label"
                      >
                        Creation Time
                      </span>
                      <span
                        class="xy-descriptions-item-content"
                      >
                        
                        2017-01-10
                        
                      </span>
                    </div>
                  </td>
                  
                </tr>
                <tr
                  class="xy-descriptions-row"
                >
                  
                  <td
                    class="xy-descriptions-item"
                    colspan="1"
                  >
                    <div
                      class="xy-descriptions-item-container"
                    >
                      <span
                        class="xy-descriptions-item-label"
                      >
                        Effective Time
                      </span>
                      <span
                        class="xy-descriptions-item-content"
                      >
                        
                        2017-10-10
                        
                      </span>
                    </div>
                  </td>
                  <td
                    class="xy-descriptions-item"
                    colspan="2"
                  >
                    <div
                      class="xy-descriptions-item-container"
                    >
                      <span
                        class="xy-descriptions-item-label"
                      >
                        Remarks
                      </span>
                      <span
                        class="xy-descriptions-item-content"
                      >
                        
                         Gonghu Road, Xihu District, Hangzhou, Zhejiang, China 
                        
                      </span>
                    </div>
                  </td>
                  
                </tr>
                
              </tbody>
            </table>
          </div>
        </div>
        
      </div>
      <!---->
    </div>
  </div>
  <label
    class="xy-checkbox-wrapper"
    style="margin-top: 0.5rem;"
  >
    <span
      class="xy-checkbox"
    >
      <input
        class="xy-checkbox-input"
        type="checkbox"
      />
      <span
        class="xy-checkbox-inner"
      />
    </span>
    <span>
      
      toggle ghost
      
    </span>
  </label>
  
</div>
`;

exports[`renders ./components/page-header/demo/responsive.vue correctly 1`] = `
<div
  class="components-page-header-demo-responsive"
  style="border: 1px solid rgb(235, 237, 240);"
>
  <div
    class="xy-page-header has-footer xy-page-header-ghost"
  >
    <!---->
    <div
      class="xy-page-header-heading"
    >
      <div
        class="xy-page-header-heading-left"
      >
        <div
          class="xy-page-header-back"
        >
          <div
            aria-label="Back"
            class="xy-page-header-back-button"
            role="button"
            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
            tabindex="0"
          >
            
            <span
              aria-label="arrow-left"
              class="anticon anticon-arrow-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="arrow-left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 000 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            
          </div>
        </div>
        <!---->
        <span
          class="xy-page-header-heading-title"
          title="Title"
        >
          Title
        </span>
        <span
          class="xy-page-header-heading-sub-title"
          title="This is a subtitle"
        >
          This is a subtitle
        </span>
        <!---->
      </div>
      <span
        class="xy-page-header-heading-extra"
      >
        <div
          class="xy-space xy-space-horizontal xy-space-align-center"
        >
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="xy-btn xy-btn-default"
              type="button"
            >
              <!---->
              
              <span>
                Operation
              </span>
              
            </button>
          </div>
          <!---->
          
          
          <div
            class="xy-space-item"
          >
            <button
              class="xy-btn xy-btn-primary"
              type="button"
            >
              <!---->
              
              <span>
                Primary
              </span>
              
            </button>
          </div>
          <!---->
          
          
        </div>
      </span>
    </div>
    <div
      class="xy-page-header-content"
    >
      
      <div
        class="content"
      >
        <div
          class="main"
        >
          <div
            class="xy-descriptions xy-descriptions-small"
          >
            <!---->
            <div
              class="xy-descriptions-view"
            >
              <table>
                <tbody>
                  
                  <tr
                    class="xy-descriptions-row"
                  >
                    
                    <td
                      class="xy-descriptions-item"
                      colspan="1"
                    >
                      <div
                        class="xy-descriptions-item-container"
                      >
                        <span
                          class="xy-descriptions-item-label"
                        >
                          Created
                        </span>
                        <span
                          class="xy-descriptions-item-content"
                        >
                          
                          Lili Qu
                          
                        </span>
                      </div>
                    </td>
                    <td
                      class="xy-descriptions-item"
                      colspan="1"
                    >
                      <div
                        class="xy-descriptions-item-container"
                      >
                        <span
                          class="xy-descriptions-item-label"
                        >
                          Association
                        </span>
                        <span
                          class="xy-descriptions-item-content"
                        >
                          
                          <a>
                            421421
                          </a>
                          
                        </span>
                      </div>
                    </td>
                    
                  </tr>
                  <tr
                    class="xy-descriptions-row"
                  >
                    
                    <td
                      class="xy-descriptions-item"
                      colspan="1"
                    >
                      <div
                        class="xy-descriptions-item-container"
                      >
                        <span
                          class="xy-descriptions-item-label"
                        >
                          Creation Time
                        </span>
                        <span
                          class="xy-descriptions-item-content"
                        >
                          
                          2017-01-10
                          
                        </span>
                      </div>
                    </td>
                    <td
                      class="xy-descriptions-item"
                      colspan="1"
                    >
                      <div
                        class="xy-descriptions-item-container"
                      >
                        <span
                          class="xy-descriptions-item-label"
                        >
                          Effective Time
                        </span>
                        <span
                          class="xy-descriptions-item-content"
                        >
                          
                          2017-10-10
                          
                        </span>
                      </div>
                    </td>
                    
                  </tr>
                  <tr
                    class="xy-descriptions-row"
                  >
                    
                    <td
                      class="xy-descriptions-item"
                      colspan="2"
                    >
                      <div
                        class="xy-descriptions-item-container"
                      >
                        <span
                          class="xy-descriptions-item-label"
                        >
                          Remarks
                        </span>
                        <span
                          class="xy-descriptions-item-content"
                        >
                          
                           Gonghu Road, Xihu District, Hangzhou, Zhejiang, China 
                          
                        </span>
                      </div>
                    </td>
                    
                  </tr>
                  
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="extra"
        >
          <div
            style="display: flex; justify-content: flex-end;"
          >
            <div
              class="xy-statistic"
              style="margin-right: 32px;"
            >
              <div
                class="xy-statistic-title"
              >
                Status
              </div>
              
              <div
                class="xy-statistic-content"
              >
                <!---->
                <span
                  class="xy-statistic-content-value"
                >
                  Pending
                </span>
                <!---->
              </div>
              
            </div>
            <div
              class="xy-statistic"
            >
              <div
                class="xy-statistic-title"
              >
                Price
              </div>
              
              <div
                class="xy-statistic-content"
              >
                <span
                  class="xy-statistic-content-prefix"
                >
                  $
                </span>
                <span
                  class="xy-statistic-content-value"
                >
                  
                  <span
                    class="xy-statistic-content-value-int"
                  >
                    
                    568
                  </span>
                  <span
                    class="xy-statistic-content-value-decimal"
                  >
                    .08
                  </span>
                  
                </span>
                <!---->
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="xy-page-header-footer"
    >
      
      <div
        class="xy-tabs xy-tabs-top "
      >
        <div
          class="xy-tabs-nav"
          role="tablist"
        >
          <!---->
          <div
            class="xy-tabs-nav-wrap"
          >
            <div
              class="xy-tabs-nav-list"
              style="transform: translate(0px, 0px);"
            >
              
              <div
                class="xy-tabs-tab xy-tabs-tab-active"
              >
                <div
                  aria-selected="true"
                  class="xy-tabs-tab-btn"
                  role="tab"
                  tabindex="0"
                >
                  Details
                </div>
                <!---->
              </div>
              <div
                class="xy-tabs-tab"
              >
                <div
                  aria-selected="false"
                  class="xy-tabs-tab-btn"
                  role="tab"
                  tabindex="0"
                >
                  Rule
                </div>
                <!---->
              </div>
              
              <!---->
              <div
                class="xy-tabs-ink-bar xy-tabs-ink-bar-animated"
              />
            </div>
          </div>
          <div
            class="xy-tabs-nav-operations xy-tabs-nav-operations-hidden"
          >
            
            <button
              aria-controls="null-more-popup"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-hidden="true"
              class="xy-tabs-nav-more"
              id="null-more"
              style="visibility: hidden; order: 1;"
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="anticon anticon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
            <!---->
            
            <!---->
          </div>
          <!---->
          <!---->
        </div>
        <div
          class="xy-tabs-content-holder"
        >
          <div
            class="xy-tabs-content xy-tabs-content-top"
          >
            
            <div
              aria-hidden="false"
              class="xy-tabs-tabpane xy-tabs-tabpane-active"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-hidden="true"
              class="xy-tabs-tabpane"
              role="tabpanel"
              style="display: none;"
              tabindex="-1"
            >
              <!---->
            </div>
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
